# 2024/02/25
- Added /aqo save command
- Fix mage pettype command

# 2024/02/25
- implement cures maybe
- some spell updates
- some manual casting fixes

# 2024/02/03
- Move all init* ability list initializers to one initAbilities based off Abilities table because reasons

# 2024/02/01
- Prep work for removing initBuffs methods
- Consolidate initSpellConditions into ability definitions

# 2024/01/31
- Small self heal fix if heal spell isn't ready/enabled
- Re-initialize spell lines when new spell is memmed

# 2024/01/29
- Questionable updates around precast/postcast to work with the not synchronous pattern of the script
- Try fixing some spammy melee abilities

# 2024/01/28
- More 86-100 spells for ber bst clr enc pal

# 2024/01/27
- Fix stopping medding early as puller
- Use common list processing on sk

# 2024/01/22
- Some fixes around pulling and recover and rest routines related to medding
- Some workarounds for bst not liking casting paragon on itself

# 2024/01/21
- Necromancer updates
- UI lock button

# 2024/01/20
- Berserker updates
- Monk updates
- Add libaqo submodule to start making some common stuff

# 2024/01/17
- Updates to memming spells

# 2024/01/13
- Some refactoring around ability can/should use methods
- Remove state.loop variables

# 2024/01/07
- Consolidate actor buff requests and request aliases
- Fix nukemanamin / dotmanamin checks for non-mana using abilities / non-casters
- Fix WillLand check for buff actors

# 2024/01/06
- Try to merge some emu vs live config for shm and bst
- Check dot / nuke min mana on casts
- HP med start/stop settings
- Misc cleanup
- Move some debug tab clutter to other tabs
- Make state inspector into a table

# 2023/12/24
- Add very basic actor based buffing logic

# 2023/12/23
- Some consolidation of casting code

# 2023/11/28
- Update logging for finding abilities
- Refactor actor experiment a bit
- Add theme setting on debug tab for fun

# 2023/11/27
- add some stuff around clickies