@@ -45,37 +45,44 @@ end
 function mez.doSingle(mez_spell)
     if state.mobCount <= 1 or not mez_spell or not mq.TLO.Me.Gem(mez_spell.CastName)() then return end
     for id,mobdata in pairs(state.targets) do
-        logger.debug(logger.flags.routines.mez, '[%s] meztimer: %s, currentTime: %s, timerExpired: %s', id, mobdata['meztimer'].start_time, mq.gettime(), mobdata['meztimer']:expired())
-        if id ~= state.assistMobID and (mobdata['meztimer'].start_time == 0 or mobdata['meztimer']:expired()) then
+        logger.debug(logger.flags.routines.mez, '[%s] meztimer: %s, currentTime: %s, timerExpired: %s', id, mobdata.meztimer and mobdata.meztimer.start_time or 0, mq.gettime(), mobdata.meztimer and mobdata.meztimer:expired() or true)
+        -- if id ~= state.assistMobID and (mobdata['meztimer'].start_time == 0 or mobdata['meztimer']:expired()) then
+        if id ~= state.assistMobID and (not mobdata.meztimer or mobdata.meztimer:expired()) and not mobdata.dontmez then
             local mob = mq.TLO.Spawn('id '..id)
             if mob() and not state.mezImmunes[mob.CleanName()] then
                 local spellData = mq.TLO.Spell(mez_spell.CastName)
                 local maxLevel = spellData.Max(1)() or mq.TLO.Me.Level()
-                if id ~= state.assistMobID and mob.Level() <= maxLevel and mob.Type() == 'NPC' then
+                -- if id ~= state.assistMobID and mob.Level() <= maxLevel and mob.Type() == 'NPC' then
+                if mob.Level() <= maxLevel and mob.Type() == 'NPC' then
                     mq.cmd('/attack off')
                     mq.delay(100, function() return not mq.TLO.Me.Combat() end)
                     mob.DoTarget()
-                    local pct_hp = mq.TLO.Target.PctHPs()
-                    if mq.TLO.Target() and mq.TLO.Target.Type() == 'Corpse' then
+                    local pct_hp = mq.TLO.Target.PctHPs() or 0
+                    if mq.TLO.Target.Type() == 'Corpse' then
                         state.targets[id] = nil
-                    elseif pct_hp and pct_hp > 85 then
-                        local assist_spawn = assist.getAssistSpawn()
-                        if assist_spawn == -1 or assist_spawn.ID() ~= id then
-                            state.mezTargetName = mob.CleanName()
-                            state.mezTargetID = id
-                            logger.info('Mezzing >>> %s (%d) <<<', mob.Name(), mob.ID())
-                            if mez_spell.precast then mez_spell.precast() end
-                            abilities.use(mez_spell)
-                            mq.delay(100)
-                            mq.delay(3500, function() return not mq.TLO.Me.Casting() == mez_spell.CastName end)
+                    elseif pct_hp > 85 then
+                        state.mezTargetName = mob.CleanName()
+                        state.mezTargetID = id
+                        mq.delay(2000, function() return mq.TLO.Me.SpellReady(mez_spell.CastName)() end)
+                        if mez_spell.precast then mez_spell.precast() end
+                        -- logger.info('Mezzing >>> %s (%d) <<<', mob.Name(), mob.ID())
+                        -- abilities.use(mez_spell)
+                        mez_spell:use(true)
+                        mq.delay(100)
+                        mq.delay(3500, function() return not mq.TLO.Me.Casting() end)
+                        mq.doevents('eventMezImmune')
+                        mq.doevents('eventMezResist')
+                        if mq.TLO.Target.Mezzed() then
+                            logger.info('Mezzed >>> %s (%s) <<<', mob.Name(), mob.ID())
                             logger.debug(logger.flags.routines.mez, 'STMEZ setting meztimer mob_id %d', id)
-                            mobdata.meztimer = timer:new(mez_spell.DurationTotalSeconds*1000)
-                            mq.doevents('eventMezImmune')
-                            mq.doevents('eventMezResist')
-                            state.mezTargetID = 0
-                            state.mezTargetName = nil
-                            return true
+                            mobdata.meztimer = timer:new(mez_spell.DurationTotalSeconds*1000 - 10000)
                         end
+                        state.mezTargetID = 0
+                        state.mezTargetName = nil
+                        return true
+                    else
+                        -- avoid target spamming if mob below mez hp %
+                        mobdata.dontmez = true
                     end
                 elseif mob.Type() == 'Corpse' then
                     state.targets[id] = nil
@@ -87,6 +94,11 @@ end
 
 function mez.eventMezBreak(line, mob, breaker)
     logger.info('\at%s\ax mez broken by \at%s\ax', mob, breaker)
+    for id,mobdata in pairs(state.targets) do
+        if mobdata.Name == mob and mobdata.meztimer then
+            mobdata.meztimer:reset(0)
+        end
+    end
 end
 
 function mez.eventMezImmune(line)
